# whisper-mac

./: .aiignore  .dir2md.json  .electronignore  .gitignore  CLAUDE.md  CRUSH.md  GEMINI_IMPLEMENTATION_SUMMARY.md  GEMINI_PLUGIN_PLAN.md  Makefile  README.md  bugs.md  debug-action.js  debug-liquid-glass.js  design_docs.txt  icons.js  package-lock.json  package.json  plan.md  rewrite_commits.js  test-plugin-activation.js  test.md  todo.md  tsconfig.json
.githooks/: pre-commit
.qoder/quests/: copy-assetsjs.md  dark-mode-implementation.md  data-management-display.md  rules-editor.md  (+3 more)
docs/: ACTIONS.md  PROMISE_MANAGER.md  SCREENSHOT_FEATURE.md  STATUS_MENU.md  UNIFIED_PLUGIN_IMPLEMENTATION.md  UNIFIED_PLUGIN_SYSTEM.md
native/parakeet-backend/: Cargo.toml
native/parakeet-backend/src/: main.rs
plugins-setup/: vosk-setup.js  whisper-cpp-setup.js  yap-setup.js
python/: download_model.py  whisper_server.py  whisperlive_launcher.py
scripts/: FocusedText.swift  _vue.js  afterPack.js  build-get-selection.js  build-injectutil.js  copy-assets.js  download-photon.js  fetch-python.js  fetch-wheels.js  fetch-whisperlive.js  generate-icons.js  get-selection  get-selection.swift  injectUtil  injectUtil.swift  install-app.ts  prep-python-env.js  prep-vad-assets.js  setup-plugins.js  stage-python-arch.js  strip-release.sh  test-clipboard.js  test-icon-path.js  test-parakeet-server.js  test-performance.js  test-screenshot.js  test-server.html  test-server.js  test-status-menu.js  test-whisperlive.ts  vosk_transcribe.py
server/: realtimestt.py
src/: .dir2md.json  main.ts
(+180 files in other folders)
