[package]
name = "parakeet-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
transcribe-rs = { git = "https://github.com/cjpais/transcribe-rs", branch = "main" }
